Fixed overflow error

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,3 @@
 .app__container {
   min-height: 100vh;
-  width: 100vw;
 }
